<resources>
    <string name="app_name">VatApp</string>
    <string name="cost_or_total_price">Cost Or Total Price</string>
    <string name="select_vat_percentage">Select Vat Percentage</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="vatapp">VatApp</string>
    <string name="calculate_vat">CALCULATE VAT</string>
    <string name="round_up_total">Round Up Total</string>
    <string name="Total_Amount">Total Amount: %s</string>
    <string name="VAT_Amount">VAT Amount: %s</string>
</resources>