<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Light_green"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity"
    >

    <EditText
        android:id="@+id/Input_Total_Cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cost_or_total_price"
        android:inputType="numberDecimal"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/select_vat_percentage"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/Radio_Group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/ten_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioButton
            android:id="@+id/fifteen_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioButton
            android:id="@+id/twenty_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20"
            android:textAppearance="?android:textAppearanceMedium" />
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchB"
        android:text="@string/round_up_total"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/calculate_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_vat"
        android:backgroundTint="#207501"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/Text_cost_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/vatapp"
        android:textSize="17sp"
        android:layout_gravity="end"
        />

</LinearLayout>